# snews-data-formats

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
doc/: Makefile  data-relations.dot
docs/data/: index.md
docs/spec/: detectors.md  index.md  timing.md
snews/: __version__.py
snews/models/: messages.py  timing.py
snews/schema/: CoincidenceTierMessage.schema.json  Detector.schema.json  HeartbeatMessage.schema.json  RetractionMessage.schema.json  SignificanceTierMessage.schema.json  TimingTierMessage.schema.json
snews_data/: __main__.py  __version__.py
snews_data/data/: __init__.py  detectors.json
snews_data/models/: __init__.py  detectors.py  messages.py
snews_data/schema/: DetectorModel.schema.json  SNEWSMessageCoincidenceTierModel.schema.json  SNEWSMessageHeartBeatModel.schema.json  SNEWSMessageRetractionModel.schema.json  SNEWSMessageSigTierModel.schema.json  SNEWSMessageTimeTierModel.schema.json
test/integration/: test_schema_generation.py
test/models/: test_message_models.py  test_snews_message_models.py
test/unit/: test_data.py  test_detectors.py  test_models.py  test_timing.py
