[tool.poetry]
name = "snews-data-services"
version = "0.1.0"
description = "A unified collection of SNEWS data, models, and schema"
authors = ["Justin Vasel <justin.vasel@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "snews_data"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.4.2"
single-version = "^1.6.0"
pydantic-extra-types = "^2.1.0"
pycountry = "^22.3.5"
pytest-cov = "^4.1.0"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
hypothesis = {extras = ["cli"], version = "^6.88.1"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
hypothesis = {extras = ["cli"], version = "^6.88.1"}

[tool.poetry.scripts]
snews_data_services = "snews_data.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
